--- a/index.html
+++ b/index.html
@@ -8,26 +8,31 @@
 <body>
     <h2>このページは医療関係者または学生のみ閲覧可能です。</h2>
     <p>認証のため、メールアドレスを入力してください:</p>
-    <form onsubmit="validateEmail(event)">
-        <input type="email" id="email" placeholder="example@university.ac.jp" required>
+    
+    <!-- フォーム設定 -->
+    <form name="email-form" method="POST" netlify>
+        <label for="email">Email: <input type="email" id="email" name="email" placeholder="example@university.ac.jp" required></label>
         <button type="submit">送信</button>
     </form>
+
     <script>
         function validateEmail(event) {
-            event.preventDefault(); // フォームが送信されるのを防ぐ
+            event.preventDefault(); // フォーム送信を止める
             var email = document.getElementById("email").value;
-            var domain = email.split("@")[1]; // メールアドレスのドメイン部分を取得
-            var allowedDomains = ["tcu.ac.jp"]; // 許可されたドメイン
+            var domain = email.split("@")[1];
+            var allowedDomains = ["university.ac.jp", "company.com"]; // 許可されたドメインリスト
 
             if (allowedDomains.includes(domain)) {
-                window.location.href = "https://www.aist.go.jp/aist_j/press_release/pr2003/pr20031022/pr20031022.html"; // 認証後のリダイレクト先
+                // メールアドレスが許可された場合にフォームを送信
+                event.target.submit();
             } else {
                 alert("認証に失敗しました。正しいメールアドレスを入力してください。");
             }
         }
 
-        // フォームの送信ボタンを押したときにvalidateEmailを実行
+        // フォーム送信時にvalidateEmailを実行
         document.querySelector('form').addEventListener('submit', validateEmail);
     </script>
 </body>
 </html>
+
