--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             if (allowedDomains.includes(domain)) {
                 // メールアドレスが許可された場合にフォームを送信
                 event.target.submit();
+                window.location.href = "https://www.aist.go.jp/aist_j/press_release/pr2003/pr20031022/pr20031022.html"; // 認証後のリダイレクト先
             } else {
                 alert("認証に失敗しました。正しいメールアドレスを入力してください。");
             }
@@ -35,4 +36,5 @@
     </script>
 </body>
 </html>
+
 
