--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>認証のため、メールアドレスを入力してください:</p>
     
     <!-- フォーム設定 -->
-    <form name="email-form" method="POST" netlify data-netlify="true" action="/thank-you.html">
+    <form name="email-form" method="POST" netlify data-netlify="true" action="/thankyou.html">
         <label for="email">Email: <input type="email" id="email" name="email" placeholder="example@university.ac.jp" required></label>
         <button type="submit">送信</button>
     </form>
