--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>認証のため、メールアドレスを入力してください:</p>
     
     <!-- フォーム設定 -->
-    <form name="email-form" method="POST" netlify data-netlify="true" action="/thankyou.html">
+    <form name="email-form" method="POST" netlify data-netlify="true" action="/thank-you.html">
         <label for="email">Email: <input type="email" id="email" name="email" placeholder="example@university.ac.jp" required></label>
         <button type="submit">送信</button>
     </form>
@@ -23,8 +23,8 @@
             var allowedDomains = ["tcu.ac.jp"]; // 許可されたドメインリスト
 
             if (allowedDomains.includes(domain)) {
-                // ドメインが正しい場合はフォームを送信してメールアドレスを回収
-                event.target.submit(); // Netlifyにメールアドレスを送信
+                // フォームを送信
+                event.target.submit();
             } else {
                 alert("認証に失敗しました。正しいメールアドレスを入力してください。");
             }
